--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@
                     designed to achieve them.Progress must be assesed toward
                     achieving team goals periodically. This includes identifying
                     barriers to achieving these goals.<br>
-                  <div class="columns has-background-info-dark has-text-white">
+                  <div class="columns has-background-info has-text-white">
                     <div class="column center">
-                      <i class="fas fa-2x fa-users"></i>
+                      <i class="fas fa-1x fa-users"></i>
                     </div>
                     <div class="column center">
-                      <i class="far fa-2x fa-file-excel"></i></i>
+                      <i class="far fa-1x fa-file-excel"></i></i>
                     </div>
                     <div class="column center">
-                      <i class="fas fa-2x fa-signal"></i>
+                      <i class="fas fa-1x fa-signal"></i>
                     </div>
                   </div>
                   </p>
