--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div id="over-section" class="content p-5 has-background-info">
           <div class="columns is-multiline has-background-info-light">
 
-            <div class="column is-one-quater">
+            <div class="column is-one-third">
               <article class="card has-background-info" id="home">
                 <div class="card-content">
                   <p class="subtitle has-text-white center"><b>Scheduling</b></p>
@@ -211,7 +211,7 @@
               </article>
             </div>
 
-            <div class="column is-one-quater">
+            <div class="column is-one-third">
               <article class="card has-background-info" id="home">
                 <div class="card-content">
                   <p class="subtitle has-text-white center"><b>Performances</b></p>
@@ -226,37 +226,7 @@
               </article>
             </div>
 
-            <div class="column is-one-quater">
-              <article class="card has-background-info" id="home">
-                <div class="card-content">
-                  <p class="subtitle has-text-white center"><b>Team</b>
-                  </p>
-                  <p class="has-text-white">
-                    Healthy teams have team members that feel good about each other.
-                    This in turn improves <b>customer service,</b> increases
-                    customer satisfaction, and builds strong customer loyalty. More
-                    important, it boosts profits.Strong teams focus on results — not
-                    processes, reaching team goals and completing activities
-                    designed to achieve them.Progress must be assesed toward
-                    achieving team goals periodically. This includes identifying
-                    barriers to achieving these goals.<br>
-                  <div class="columns has-background-info has-text-white">
-                    <div class="column center">
-                      <i class="fas fa-1x fa-users"></i>
-                    </div>
-                    <div class="column center">
-                      <i class="far fa-1x fa-file-excel"></i></i>
-                    </div>
-                    <div class="column center">
-                      <i class="fas fa-1x fa-signal"></i>
-                    </div>
-                  </div>
-                  </p>
-                </div>
-              </article>
-            </div>
-
-            <div class="column is-one-quater">
+            <div class="column is-one-third">
               <article class="card has-background-info" id="home">
                 <div class="card-content">
                   <p class="subtitle has-text-white center"><b>Projects</b></p>
@@ -271,8 +241,8 @@
             </div>
           </div>
 
-            <div class="columns">
-            <div class="column has-background-info-light">
+          <div class="columns has-background-info-light">
+            <div class="column">
               <article class="card has-background-info" id="home1">
                 <div class="card-content">
                   <p class="subtitle has-text-white center"><b>Incentives</b></p>
@@ -294,10 +264,40 @@
                 </div>
               </article>
             </div>
+
+            <div class="column is-half">
+              <article class="card has-background-info" id="home">
+                <div class="card-content">
+                  <p class="subtitle has-text-white center"><b>Team</b>
+                  </p>
+                  <p class="has-text-white">
+                    Healthy teams have team members that feel good about each other.
+                    This in turn improves <b>customer service,</b> increases
+                    customer satisfaction, and builds strong customer loyalty.Strong teams focus on results — not
+                    processes, reaching team goals and completing activities
+                    designed to achieve them.Progress must be assesed toward
+                    achieving team goals periodically. This includes identifying
+                    barriers to achieving these goals.<br>
+                  <div class="columns has-background-info has-text-white">
+                    <div class="column center">
+                      <i class="fas fa-1x fa-users"></i>
+                    </div>
+                    <div class="column center">
+                      <i class="far fa-1x fa-file-excel"></i></i>
+                    </div>
+                    <div class="column center">
+                      <i class="fas fa-1x fa-signal"></i>
+                    </div>
+                  </div>
+                  </p>
+                </div>
+              </article>
+            </div>
+
           </div>
 
-            
-          
+
+
         </div>
       </div>
     </div>
@@ -1202,11 +1202,11 @@
     </div>
     <hr />
 
-    <div class="content has-text-centered">
+    <div id="footer-footer" class="content has-text-centered">
       <p>
         <strong>MyKPI</strong> by
         <a href="https://github.com/Sands-45">Sands QA</a>. The source code is
-        licensed
+        licensed by
         <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. All
         Rights Reserved, Copyright&copy;
         <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Dial n' Dine 2021</a>.
