--- a/index.html
+++ b/index.html
@@ -278,15 +278,15 @@
                     designed to achieve them.Progress must be assesed toward
                     achieving team goals periodically. This includes identifying
                     barriers to achieving these goals.<br>
-                  <div class="columns has-background-info has-text-white">
-                    <div class="column center">
-                      <i class="fas fa-1x fa-users"></i>
+                  <div id="team" class="columns m-3 has-background-info has-text-white">
+                    <div class="column m-1 center has-background-link">
+                      <img src="./images/tracking.jpg" style="max-height: 100px">
                     </div>
-                    <div class="column center">
-                      <i class="far fa-1x fa-file-excel"></i></i>
+                    <div class="column m-1 center has-background-success">
+                      <img src="./images/advantage.png" style="max-height: 100px">
                     </div>
-                    <div class="column center">
-                      <i class="fas fa-1x fa-signal"></i>
+                    <div class="column m-1 center has-background-danger">
+                      <img src="./images/feedback.png" style="max-height: 100px">
                     </div>
                   </div>
                   </p>
