--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
           <div class="column is-half">
             <article class=" is-info">
               <div class="subtitle center">
-                <p class="has-text-weight-bold has-text-white">Agents Performances</p>&nbsp;<button
-                  class="button is-dark">Click Image To
+                <button
+                  class="button is-dark">Agents Performances | Click Image To
                   View</button>
               </div>
 
@@ -409,8 +409,8 @@
           <div class="column is-half">
             <article class=" is-info">
               <div class="subtitle center">
-                <p class="has-text-weight-bold has-text-white">Call Center Credits</p>&nbsp;<button
-                  class="button is-dark">Click Image To
+                <button
+                  class="button is-dark">Call Center Credits | Click Image To
                   View</button>
               </div>
 
@@ -437,8 +437,8 @@
           <div class="column is-half">
             <article class=" is-info">
               <div class="subtitle center">
-                <p class="has-text-weight-bold has-text-white">Incomplete Calls</p>&nbsp;<button
-                  class="button is-dark">Click Image To
+                <button
+                  class="button is-dark">Incomplete Calls | Click Image To
                   View</button>
               </div>
 
@@ -463,8 +463,8 @@
           <div class="column is-half">
             <article class=" is-info">
               <div class="subtitle center">
-                <p class="has-text-weight-bold has-text-white">Warnings Tracker </p>&nbsp;<button
-                  class="button is-dark">Click Image To
+                <button
+                  class="button is-dark">Warnings Tracker | Click Image To
                   View</button>
               </div>
 
