--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           <div class="message-header">
             <h2 class="title center has-text-white pb-2"><i class="fas fa-chart-area"></i>Performances</h2>
           </div>
-          <div class="message-body">
+          <div class="message-body has-background-info">
             <article class="media">
               <div class="columns">
                 <div class="colunm m-2 is-one-third is-link">
@@ -381,10 +381,10 @@
 
         <div class="columns">
           <div class="column is-half">
-            <article class=" is-info">
+            <article class="card has-background-info">
               <div class="subtitle center">
                 <button
-                  class="button is-dark">Agents Performances | Click Image To
+                  class="button mt-2 is-dark">Agents Performances | Click Image To
                   View</button>
               </div>
 
@@ -407,10 +407,10 @@
           </div>
 
           <div class="column is-half">
-            <article class=" is-info">
+            <article class="card has-background-info">
               <div class="subtitle center">
                 <button
-                  class="button is-dark">Call Center Credits | Click Image To
+                  class="button mt-2 is-dark">Call Center Credits | Click Image To
                   View</button>
               </div>
 
@@ -435,10 +435,10 @@
 
         <div class="columns">
           <div class="column is-half">
-            <article class=" is-info">
+            <article class="card has-background-info">
               <div class="subtitle center">
                 <button
-                  class="button is-dark">Incomplete Calls | Click Image To
+                  class="button mt-2 is-dark">Incomplete Calls | Click Image To
                   View</button>
               </div>
 
@@ -461,10 +461,10 @@
           </div>
 
           <div class="column is-half">
-            <article class=" is-info">
+            <article class="card has-background-info">
               <div class="subtitle center">
                 <button
-                  class="button is-dark">Warnings Tracker | Click Image To
+                  class="button mt-2 is-dark">Warnings Tracker | Click Image To
                   View</button>
               </div>
 
